5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1712_2496.log
== TEST (2019-05-08 14:38:36) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
print(soma)
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:38:38) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
print(soma)
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:17) 
-- CODE:

soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(nput("Insira o valor: "))

	print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num >= 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:18) 
-- CODE:

soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(nput("Insira o valor: "))

	print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num >= 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:26) 
-- CODE:
num = float(nput("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(nput("Insira o valor: "))

	print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = float(nput("Insira o valor: "))
NameError: name 'nput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:27) 
-- CODE:
num = float(nput("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(nput("Insira o valor: "))

	print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = float(nput("Insira o valor: "))
NameError: name 'nput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:28) 
-- CODE:
num = float(nput("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(nput("Insira o valor: "))

	print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = float(nput("Insira o valor: "))
NameError: name 'nput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:28) 
-- CODE:
num = float(nput("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(nput("Insira o valor: "))

	print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = float(nput("Insira o valor: "))
NameError: name 'nput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:33) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(nput("Insira o valor: "))

	print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = float(nput("Insira o valor: "))
NameError: name 'nput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:54) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(nput("Insira o valor: "))
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = float(nput("Insira o valor: "))
NameError: name 'nput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:40:02) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(input("Insira o valor: "))
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = float(nput("Insira o valor: "))
NameError: name 'nput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:42:12) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = float(nput("Insira o valor: "))
NameError: name 'nput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:43:11) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	num = float(input("Insira o valor: "))
	soma = soma + 1
	
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = float(nput("Insira o valor: "))
NameError: name 'nput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:46:16) 
-- CODE:

soma = 0
while(soma >= 0):
	num = float(input("Insira o valor: "))
	soma = soma + 1
	
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:46:27) 
-- CODE:

soma = 0
while(soma >= 0):
	num = float(input("Insira o valor: "))
	soma = soma + 1
	
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:48:49) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
		num = float(input("Insira o valor: "))
	
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:49:11) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:49:20) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- EXECUTION TIME:
0.387844
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
7
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:49:22) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:49:23) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- EXECUTION TIME:
0.310285
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
Insira o valor: Insira o valor: Insira o valor: Insira o valor: Insira o valor: Insira o valor: Insira o valor: Insira o valor: 7
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Insira o valor: Insira o valor: Insira o valor: 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:50:07) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = num + 1
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:50:18) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = num + 1
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- EXECUTION TIME:
0.373469
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
1.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32654.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:51:04) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:12) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- EXECUTION TIME:
0.461389
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:14) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- EXECUTION TIME:
0.289375
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
0.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:15) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- EXECUTION TIME:
0.769082
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
0.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:15) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- EXECUTION TIME:
0.727728
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
43606.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:15) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- EXECUTION TIME:
0.715376
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:15) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	
print(soma)
	
-- EXECUTION TIME:
1.03517
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0.0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
43606.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:20) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.300982
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953.0
43606.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:21) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.504285
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:22) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.595438
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
10953.0
43606.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:22) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.576188
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:23) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.688682
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2496/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:23) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.242059
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2496/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:51:23) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = float(input("Insira o valor: "))
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:51:42) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = input("Insira o valor: "))
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:51:44) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = input("Insira o valor: "))
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:51:47) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = input("Insira o valor: ")
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:52:38) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = input("Insira o valor: "))
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:52:43) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = input("Insira o valor: ")
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:52:57) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:53:01) 
-- CODE:
num = float(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
print(soma)
	
-- EXECUTION TIME:
0.114196
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Insira o valor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:53:04) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.118039
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:18) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:53:32) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.14213
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
7
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:44) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = int(input("Insira o valor: "))
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:44) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = int(input("Insira o valor: "))
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:54:39) 
-- CODE:
num = num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:54:46) 
-- CODE:
num = num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.144327
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:54:47) 
-- CODE:
num = num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.185919
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:54:48) 
-- CODE:
num = num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.151944
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:54:48) 
-- CODE:
num = num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- ERROR:
File "XXXX", line 5
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:54:48) 
-- CODE:
num = num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.141254
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
43606
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Insira o valor: Insira o valor: Insira o valor: 43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:54:55) 
-- CODE:
num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.161768
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:54:56) 
-- CODE:
num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.1107
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:54:57) 
-- CODE:
num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.158523
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:55:05) 
-- CODE:

soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num >= 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:56:38) 
-- CODE:
num = 0
soma = 0
while(num >= 0):
	num = num + 1
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:00:25) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + 1
	num = int(input("Insira o valor: "))
print(soma)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:00:47) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:06) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.15655
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:08) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.187097
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:09) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.113461
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:09) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.187143
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
10953
43606
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:10) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.279232
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:01:10) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:10) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.563728
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:10) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.661257
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
10953
43606
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:10) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.708327
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
10953
43606
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:10) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.496483
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
10953
43606
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:10) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.252122
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
0
0
0
0
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:11) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.177083
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
10953
43606
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:01:11) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:01:11) 
-- CODE:
num = int(input("Insira o valor: "))
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
	print(soma)
	
-- EXECUTION TIME:
0.429984
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:03:00) 
-- CODE:
num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:03:07) 
-- CODE:
num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.271809
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:03:08) 
-- CODE:
num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:03:33) 
-- CODE:
num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = num + 1
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.150681
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:07:25) 
-- CODE:
num = 0
soma = 0
while(num >= 0):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.139303
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:07:52) 
-- CODE:
num = 0
soma = 0
while(num != -1):
	soma = soma + num
	num = int(input("Insira o valor: "))
print(soma)
	
-- EXECUTION TIME:
0.134541
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
